# envcli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  run_tui.py  test.json
.github/workflows/: ci.yml  release.yml
docs/: AI_ACTIONS_QUICK_REFERENCE.md  AI_ARCHITECTURE.md  AI_CUSTOM_RULES.md  AI_PROVIDERS.md  AI_QUICK_REFERENCE.md  AI_SAFE_ACTIONS.md
examples/: ai_provider_demo.py  example_plugin.py
src/envcli/: __init__.py  __main__.py  ai_actions.py  ai_assistant.py  ai_providers.py  api_server.py  audit_reporting.py  azure_integration.py  ci_cd_integration.py  cli.py  compliance_frameworks.py  config.py  dashboard.py  encryption.py  env_manager.py  event_hooks.py  gcp_integration.py  hooks.py  kubernetes_integration.py  monitoring.py  plugins.py  policy_engine.py  predictive_analytics.py  rbac.py  shell_integration.py  sync.py  team_collaboration.py  telemetry.py  tui_editor.py  validation.py  web_dashboard.py
src/envcli/tui/: __init__.py  app.py  theme.py  themes.py
src/envcli/tui/components/: __init__.py  footer.py  header.py  sidebar.py
src/envcli/tui/screens/: __init__.py  ai_analysis.py  analytics.py  audit.py  cicd.py  cloud_sync.py  (+18 more)
tests/: conftest.py  test_ai_actions.py  test_ai_custom_rules.py  test_ai_manual.py  test_ai_providers.py  test_css.py  test_export.json  test_final_css.py  test_import.json  test_ollama_autodetect.py  test_textual_css.py  test_textual_css_corrected.py  test_textual_css_final.py
tests/integration/: test_cli_commands.py
tests/unit/: test_config.py  test_encryption.py  test_env_manager.py  test_validation.py
